--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
+    <string name="perm_browser">Browser info</string>
     <string name="perm_calendar">Calendar</string>
+    <string name="perm_calllog">Call log</string>
     <string name="perm_contacts">Contacts</string>
     <string name="perm_location">Location</string>
     <string name="perm_messages">SMS/MMS</string>
+    <string name="perm_voicemail">Voicemail</string>
 
 </resources>
