--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
+    <string name="app_defaultdeny">Default deny</string>
+    <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst</string>
     <string name="perm_browser">Browser info</string>
     <string name="perm_calendar">Calendar</string>
     <string name="perm_calllog">Call log</string>
