--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,8 @@
 
     <string name="app_name">XPrivacy</string>
     <string name="app_defaultdeny">Default deny</string>
-    <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst</string>
+    <string name="app_version" formatted="false">Version %s (%d)</string>
+    <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="perm_browser">Browser info</string>
     <string name="perm_calendar">Calendar</string>
     <string name="perm_calllog">Call log</string>
