--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_defaultdeny">Default deny</string>
+    <string name="app_debug">Debug</string>
     <string name="app_version" formatted="false">Version %s (%d)</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="perm_browser">Browser info</string>
