--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
+    <string name="app_batchedit">Batch edit</string>
+    <string name="app_select">Select &#8230;</string>
     <string name="app_debug">Debug</string>
     <string name="app_version" formatted="false">Version %s (%d)</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
