--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_batchedit">Batch edit</string>
-    <string name="app_select">Select &#8230;</string>
-    <string name="app_debug">Debug</string>
     <string name="app_version" formatted="false">Version %s (%d)</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
+    <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
+    <string name="app_batchedit">Batch edit</string>
     <string name="perm_browser">Browser</string>
     <string name="perm_calendar">Calendar</string>
     <string name="perm_contacts">Contacts</string>
@@ -18,5 +17,5 @@
     <string name="settings_permgranted">Permission not granted</string>
     <string name="settings_restrict">Check to restrict information:</string>
     <string name="settings_icon">Icon</string>
-    
+
 </resources>
