--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
+    <string name="app_notxposed">Xposed framework version 35+ not installed</string>
     <string name="app_version" formatted="false">Version %s (%d)</string>
+    <string name="app_xversion" formatted="false">Xposed version %s/%s</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="app_batchedit">Batch edit</string>
