--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,22 +1,22 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_notxposed">Xposed framework version 35+ not installed</string>
+    <string name="app_notxposed" formatted="false">Xposed framework version %d+ not installed</string>
     <string name="app_version" formatted="false">Version %s (%d)</string>
     <string name="app_xversion" formatted="false">Xposed version %s/%s</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="app_batchedit">Batch edit</string>
-    <string name="perm_browser">Browser</string>
-    <string name="perm_calendar">Calendar</string>
-    <string name="perm_contacts">Contacts</string>
-    <string name="perm_identification">Identification</string>
-    <string name="perm_location">Location</string>
-    <string name="perm_messages">Messages</string>
-    <string name="perm_phone">Phone</string>
+    <string name="restrict_browser">Browser</string>
+    <string name="restrict_calendar">Calendar</string>
+    <string name="restrict_contacts">Contacts</string>
+    <string name="restrict_identification">Identification</string>
+    <string name="restrict_location">Location</string>
+    <string name="restrict_messages">Messages</string>
+    <string name="restrict_phone">Phone</string>
     <string name="settings_nointernet">No internet access</string>
-    <string name="settings_permused">Permission used</string>
-    <string name="settings_permgranted">Permission not granted</string>
+    <string name="settings_restrictionused">Restriction used</string>
+    <string name="settings_permnotgranted">Permission not granted</string>
     <string name="settings_restrict">Check to restrict information:</string>
     <string name="settings_icon">Icon</string>
 
