--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_recordmic">Record mic</string>
     <string name="menu_readsdcard">Read sdcard</string>
     <string name="msg_restricted" formatted="false">"XPrivacy: %s restricted"</string>
+    <string name="restrict_accounts">Accounts</string>
     <string name="restrict_browser">Browser</string>
     <string name="restrict_calendar">Calendar</string>
     <string name="restrict_contacts">Contacts</string>
