--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,15 +18,16 @@
     <string name="menu_queryapn">Query APN</string>
     <string name="msg_restricted" formatted="false">"XPrivacy: %s/%s restricted"</string>
     <string name="restrict_accounts">Accounts</string>
-    <string name="restrict_browser">Browser</string>
+    <string name="restrict_boot">Boot (run at system start)</string>
+    <string name="restrict_browser">Browser (bookmarks/history)</string>
     <string name="restrict_calendar">Calendar</string>
     <string name="restrict_contacts">Contacts</string>
-    <string name="restrict_identification">Identification</string>
-    <string name="restrict_location">Location</string>
-    <string name="restrict_media">Media</string>
-    <string name="restrict_messages">Messages</string>
-    <string name="restrict_phone">Phone</string>
-    <string name="restrict_storage">Storage</string>
+    <string name="restrict_identification">Identification (device, Wi-Fi)</string>
+    <string name="restrict_location">Location (fine/coarse)</string>
+    <string name="restrict_media">Media (audio, photo, video)</string>
+    <string name="restrict_messages">Messages (SMS, MMS)</string>
+    <string name="restrict_phone">Phone (ID, number, calls)</string>
+    <string name="restrict_storage">Storage (SD card)</string>
     <string name="settings_nointernet">No internet access</string>
     <string name="settings_restrictionused">Restriction used</string>
     <string name="settings_permnotgranted">Permission not granted</string>
