--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="restrict_location">Location (fine/coarse)</string>
     <string name="restrict_media">Media (audio, photo, video)</string>
     <string name="restrict_messages">Messages (SMS, MMS)</string>
-    <string name="restrict_phone">Phone (ID, number, calls)</string>
+    <string name="restrict_phone">Phone (ID, numbers, calls)</string>
     <string name="restrict_storage">Storage (SD card)</string>
     <string name="settings_longpress">Long press for app settings</string>
     <string name="settings_restrict">Check to restrict information:</string>
