--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="app_batchedit">Browse by category</string>
     <string name="menu_reportissue">Report issue</string>
     <string name="msg_restricted" formatted="false">"XPrivacy: %s/%s restricted"</string>
-    <string name="restrict_accounts">Accounts</string>
+    <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
     <string name="restrict_boot">Boot (run at system start)</string>
     <string name="restrict_browser">Browser (bookmarks/history)</string>
     <string name="restrict_calendar">Calendar</string>
@@ -19,8 +19,8 @@
     <string name="restrict_media">Media (audio, photo, video)</string>
     <string name="restrict_messages">Messages (SMS, MMS)</string>
     <string name="restrict_phone">Phone (ID, numbers, calls)</string>
-    <string name="restrict_storage">Storage (SD card)</string>
-    <string name="settings_restrict">Check to restrict information:</string>
+    <string name="restrict_storage">External storage (SD card)</string>
+    <string name="settings_restrict">Check to restrict data access:</string>
     <string name="help_icon">Icon</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
