--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="restrict_messages">Messages (SMS, MMS)</string>
     <string name="restrict_phone">Phone (ID, numbers, calls)</string>
     <string name="restrict_storage">External storage (SD card)</string>
+    <string name="restrict_system">System (installed apps)</string>
     <string name="settings_restrict">Check to restrict data access:</string>
     <string name="help_icon">Icon</string>
     <string name="help_application">Application</string>
