--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="restrict_phone">Phone (ID, numbers, calls)</string>
     <string name="restrict_storage">External storage (SD card)</string>
     <string name="restrict_system">System (installed apps)</string>
-    <string name="settings_restrict">Check to restrict data access:</string>
+    <string name="settings_restrict">Check to restrict:</string>
     <string name="help_icon">Icon</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
