--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="app_batchedit">Browse by category</string>
     <string name="menu_report">Report issue</string>
     <string name="menu_about">About</string>
-    <string name="msg_restricted" formatted="false">"XPrivacy: %s/%s restricted"</string>
+    <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
     <string name="restrict_boot">Boot (run at system start)</string>
     <string name="restrict_browser">Browser (bookmarks/history)</string>
