--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_notxposed" formatted="false">Xposed framework version %d+ not installed</string>
+    <string name="app_notxposed" formatted="false">Xposed framework version %d+ is not installed</string>
     <string name="app_wrongandroid">Only tested with Android version 4.1 and 4.2 (JellyBean)</string>
-    <string name="app_version" formatted="false">Version: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Xposed version: %d</string>
+    <string name="app_version" formatted="false">XPrivacy version: %s (%d)</string>
+    <string name="app_xversion" formatted="false">Xposed framework version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="app_batchedit">Browse by category</string>
@@ -28,6 +28,6 @@
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
     <string name="help_granted">has Android permission</string>
-    <string name="help_used">has accessed this data</string>
+    <string name="help_used">has used this data</string>
 
 </resources>
