--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -2,9 +2,9 @@
 
     <string name="app_name">XPrivacy</string>
     <string name="app_notxposed" formatted="false">Xposed framework версия %d+ не е инсталирана</string>
-    <string name="app_wrongandroid">Only tested with Android version 4.1 and 4.2 (JellyBean)</string>
-    <string name="app_version" formatted="false">Версия: %s (%d)</string>
-    <string name="app_xversion" formatted="false">Xposed версия: %d</string>
+    <string name="app_wrongandroid">Приложението е тествано само с Android версия 4.1 и 4.2 (JellyBean)</string>
+    <string name="app_version" formatted="false">XPrivacy версия: %s (%d)</string>
+    <string name="app_xversion" formatted="false">Xposed framework версия: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Информация: https://github.com/M66B/XPrivacy/</string>
     <string name="app_batchedit">Разглеждане по категории</string>
@@ -28,6 +28,6 @@
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
     <string name="help_granted">има разрешение в Android</string>
-    <string name="help_used">имало e достъп до тези данни</string>
+    <string name="help_used">използвало е тези данни</string>
 
 </resources>
