--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="app_batchedit">Browse by category</string>
+    <string name="menu_settings">Settings</string>
     <string name="menu_report">Report issue</string>
     <string name="menu_about">About</string>
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
@@ -24,6 +25,7 @@
     <string name="restrict_storage">External storage (SD card)</string>
     <string name="restrict_system">System (installed apps)</string>
     <string name="settings_restrict">Check to restrict:</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_icon">Icon</string>
     <string name="help_application">Application</string>
     <string name="help_internet">has internet permission</string>
