--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -8,11 +8,12 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
     <string name="app_batchedit">Blader per categorie</string>
+    <string name="menu_settings">Instellingen</string>
     <string name="menu_report">Rapporteer probleem</string>
     <string name="menu_about">Over</string>
     <string name="msg_restricted" formatted="false">%s beperkt door XPrivacy</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
-    <string name="restrict_boot">Boot (run at system start)</string>
+    <string name="restrict_boot">Boot (start bij systeem start)</string>
     <string name="restrict_browser">Browser (bladwijzers/geschiedenis)</string>
     <string name="restrict_calendar">Kalender</string>
     <string name="restrict_contacts">Contacten</string>
@@ -24,6 +25,7 @@
     <string name="restrict_storage">Externe opslag (SD card)</string>
     <string name="restrict_system">Systeem (geïnstalleerde apps)</string>
     <string name="settings_restrict">Vink om te beperken:</string>
+    <string name="settings_expert">Expert modus</string>
     <string name="help_icon">Icoon</string>
     <string name="help_application">Applicatie</string>
     <string name="help_internet">heeft internet rechten</string>
