--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Информация: https://github.com/M66B/XPrivacy/</string>
     <string name="app_batchedit">Разглеждане по категории</string>
+    <string name="menu_settings">Settings</string>
     <string name="menu_report">Съобщаване за проблем</string>
     <string name="menu_about">Относно</string>
     <string name="msg_restricted" formatted="false">%s е ограничен от XPrivacy</string>
@@ -24,6 +25,7 @@
     <string name="restrict_storage">Място за съхранение (SD карта)</string>
     <string name="restrict_system">Система (инсталирани приложения)</string>
     <string name="settings_restrict">Отбележи за ограничаване:</string>
+    <string name="settings_expert">Expert mode</string>
     <string name="help_icon">Икона</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
