--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1,8 +1,9 @@
 <resources>
 
     <string name="app_name">XPrivacy</string>
-    <string name="app_notxposed" formatted="false">Δεν έχει εγκατασταθεί η έκδοση %d+ του Xposed framework</string>
     <string name="app_wrongandroid">Δοκιμασμένο μόνο σε έκδόσεις Android 4.1 και 4.2 (JellyBean)</string>
+    <string name="app_notxposed" formatted="false">Δεν έχει εγκατασταθεί η έκδοση %d+ του Xposed framework</string>
+    <string name="app_notenabled">XPrivacy is not enabled in the Xposed installer</string>
     <string name="app_version" formatted="false">Έκδοση XPrivacy: %s (%d)</string>
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
