--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -19,6 +19,7 @@
     <string name="restrict_calendar">Календар</string>
     <string name="restrict_contacts">Контакти</string>
     <string name="restrict_identification">Идентификация (устройство, Wi-Fi)</string>
+    <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Местоположение (точно/приблизително)</string>
     <string name="restrict_media">Медия (аудио, снимки, клипове)</string>
     <string name="restrict_messages">Съобщения (SMS, MMS)</string>
