--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="restrict_location">Location (fine/coarse)</string>
     <string name="restrict_media">Media (audio, photo, video)</string>
     <string name="restrict_messages">Messages (SMS, MMS)</string>
+    <string name="restrict_network">Network (addresses)</string>
     <string name="restrict_phone">Phone (ID, numbers, calls)</string>
     <string name="restrict_storage">External storage (SD card)</string>
     <string name="restrict_system">System (installed apps)</string>
