--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -17,10 +17,12 @@
     <string name="restrict_boot">Стартиране (при пускане на системата)</string>
     <string name="restrict_browser">Браузър (отметки/история)</string>
     <string name="restrict_calendar">Календар</string>
+    <string name="restrict_calling">Calling</string>
     <string name="restrict_contacts">Контакти</string>
     <string name="restrict_identification">Идентификация (устройство, Wi-Fi)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Местоположение (точно/приблизително)</string>
+    <string name="restrict_network">Network (addresses)</string>
     <string name="restrict_media">Медия (аудио, снимки, клипове)</string>
     <string name="restrict_messages">Съобщения (SMS, MMS)</string>
     <string name="restrict_phone">Телефон (ID, номера, обаждания)</string>
