--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -17,12 +17,14 @@
     <string name="restrict_boot">Zagon (zagon programa ob zagonu sistema)</string>
     <string name="restrict_browser">Brskalnik (zaznamki/zgodovina)</string>
     <string name="restrict_calendar">Koledar</string>
+    <string name="restrict_calling">Calling</string>
     <string name="restrict_contacts">Stiki</string>
     <string name="restrict_identification">Identifikacija (naprava, Wi-Fi)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Lokacija (približna/natančna)</string>
     <string name="restrict_media">Medij (zvok, slike, video)</string>
     <string name="restrict_messages">Sporočila (SMS, MMS)</string>
+    <string name="restrict_network">Network (addresses)</string>
     <string name="restrict_phone">Telefon (ID, številke, klici)</string>
     <string name="restrict_storage">Zunanja shramba (spominska kartica)</string>
     <string name="restrict_system">Sistem (nameščeni programi)</string>
