--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -8,7 +8,8 @@
     <string name="app_xversion" formatted="false">Xposed Framework Version: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
-    <string name="app_batchedit">Nach Kategorien durchsuchen:</string>
+    <string name="app_app">Applications</string>
+    <string name="app_restriction">Categories</string>
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_report">Fehler melden</string>
     <string name="menu_about">Über</string>
