--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -8,7 +8,8 @@
     <string name="app_xversion" formatted="false">Έκδοση Xposed framework: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 M. Bokhorst (M66B)</string>
     <string name="app_info">Πληροφορίες: https://github.com/M66B/XPrivacy/</string>
-    <string name="app_batchedit">Εμφάνιση ανά κατηγορία</string>
+    <string name="app_app">Applications</string>
+    <string name="app_restriction">Categories</string>
     <string name="menu_settings">Ρυθμίσεις</string>
     <string name="menu_report">Αναφορά σφάλματος</string>
     <string name="menu_about">Σχετικά</string>
