--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -8,23 +8,24 @@
     <string name="app_xversion" formatted="false">Xposed framework versie: %d</string>
     <string name="app_copyright">Copyright \u00A9 2013 by M. Bokhorst (M66B)</string>
     <string name="app_info">Info: https://github.com/M66B/XPrivacy/</string>
-    <string name="app_batchedit">Blader per categorie</string>
+    <string name="app_app">Applicaties</string>
+    <string name="app_restriction">Categorieën</string>
     <string name="menu_settings">Instellingen</string>
     <string name="menu_report">Rapporteer probleem</string>
     <string name="menu_about">Over</string>
     <string name="msg_restricted" formatted="false">%s beperkt door XPrivacy</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
-    <string name="restrict_boot">Boot (start bij systeem start)</string>
+    <string name="restrict_boot">Boot (start met systeem)</string>
     <string name="restrict_browser">Browser (bladwijzers/geschiedenis)</string>
     <string name="restrict_calendar">Kalender</string>
-    <string name="restrict_calling">Calling</string>
+    <string name="restrict_calling">Oproepen</string>
     <string name="restrict_contacts">Contacten</string>
     <string name="restrict_identification">Identificatie (apparaat)</string>
     <string name="restrict_internet">Internet</string>
     <string name="restrict_location">Locatie (fijn/grof)</string>
     <string name="restrict_media">Media (audio, foto, video)</string>
     <string name="restrict_messages">Berichten (SMS, MMS)</string>
-    <string name="restrict_network">Netwerk (addresses)</string>
+    <string name="restrict_network">Netwerk (addressen)</string>
     <string name="restrict_phone">Telefoon (ID, nummers, oproepen)</string>
     <string name="restrict_storage">Externe opslag (SD card)</string>
     <string name="restrict_system">Systeem (geïnstalleerde apps)</string>
