--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -12,6 +12,8 @@
     <string name="app_restriction">Categories</string>
     <string name="menu_settings">Einstellungen</string>
     <string name="menu_report">Fehler melden</string>
+    <string name="menu_export">Export</string>
+    <string name="menu_import">Import</string>
     <string name="menu_about">Über</string>
     <string name="msg_restricted" formatted="false">%s eingeschränkt durch XPrivacy</string>
     <string name="restrict_accounts">Konten (Google, Facebook, etc.)</string>
