--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="app_restriction">Categories</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_report">Report issue</string>
+    <string name="menu_export">Export</string>
+    <string name="menu_import">Import</string>
     <string name="menu_about">About</string>
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
