--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Съобщаване за проблем</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
+    <string name="menu_pro">Pro version</string>
     <string name="menu_about">Относно</string>
     <string name="msg_restricted" formatted="false">%s е ограничен от XPrivacy</string>
     <string name="restrict_accounts">Сметки (Google, Facebook и т.н.)</string>
