--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Αναφορά σφάλματος</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
+    <string name="menu_pro">Pro version</string>
     <string name="menu_about">Σχετικά</string>
     <string name="msg_restricted" formatted="false">%s περιορίστικε από το XPrivacy</string>
     <string name="restrict_accounts">Λογαριασμοί (Google, Facebook, κλπ)</string>
