--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Rapporteer probleem</string>
     <string name="menu_export">Exporteren</string>
     <string name="menu_import">Importeren</string>
+    <string name="menu_pro">Pro versie</string>
     <string name="menu_about">Over</string>
     <string name="msg_restricted" formatted="false">%s beperkt door XPrivacy</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
