--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Javi napako</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
+    <string name="menu_pro">Pro version</string>
     <string name="menu_about">O programu</string>
     <string name="msg_restricted" formatted="false">Pravica %s omejena s programom XPrivacy</string>
     <string name="restrict_accounts">Računi (Google, Facebook, itd)</string>
