--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_report">Report issue</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
+    <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
