--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -11,6 +11,7 @@
     <string name="app_app">Applications</string>
     <string name="app_restriction">Categories</string>
     <string name="menu_settings">Ρυθμίσεις</string>
+    <string name="menu_update">Check for updates</string>
     <string name="menu_report">Αναφορά σφάλματος</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
