--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -11,18 +11,19 @@
     <string name="app_app">Applications</string>
     <string name="app_restriction">Categories</string>
     <string name="menu_settings">Einstellungen</string>
-    <string name="menu_update">Check for updates</string>
+    <string name="menu_update">Check for update</string>
     <string name="menu_report">Fehler melden</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">Über</string>
+    <string name="msg_noupdate">No update available</string>
     <string name="msg_restricted" formatted="false">%s eingeschränkt durch XPrivacy</string>
     <string name="restrict_accounts">Konten (Google, Facebook, etc.)</string>
     <string name="restrict_boot">Boot (Beim Systemstart ausführen)</string>
     <string name="restrict_browser">Browser (Lesezeichen/Verlauf)</string>
     <string name="restrict_calendar">Kalender</string>
-    <string name="restrict_calling">Calling</string>
+    <string name="restrict_calling">Actions (call, message, browser)</string>
     <string name="restrict_contacts">Kontakte</string>
     <string name="restrict_identification">Identität (Gerät)</string>
     <string name="restrict_internet">Internet</string>
