--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,18 +11,19 @@
     <string name="app_app">Applications</string>
     <string name="app_restriction">Categories</string>
     <string name="menu_settings">Settings</string>
-    <string name="menu_update">Check for updates</string>
+    <string name="menu_update">Check for update</string>
     <string name="menu_report">Report issue</string>
     <string name="menu_export">Export</string>
     <string name="menu_import">Import</string>
     <string name="menu_pro">Pro version</string>
     <string name="menu_about">About</string>
+    <string name="msg_noupdate">No update available</string>
     <string name="msg_restricted" formatted="false">%s restricted by XPrivacy</string>
     <string name="restrict_accounts">Accounts (Google, Facebook, etc)</string>
     <string name="restrict_boot">Boot (run at system start)</string>
-    <string name="restrict_browser">Browser (bookmarks/history/start)</string>
+    <string name="restrict_browser">Browser (bookmarks/history)</string>
     <string name="restrict_calendar">Calendar</string>
-    <string name="restrict_calling">Calling</string>
+    <string name="restrict_calling">Actions (call, message, browser)</string>
     <string name="restrict_contacts">Contacts</string>
     <string name="restrict_identification">Identification (device)</string>
     <string name="restrict_internet">Internet</string>
