--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -36,6 +36,8 @@
     <string name="restrict_system">Система (инсталирани приложения)</string>
     <string name="settings_restrict">Отбележи за ограничаване:</string>
     <string name="settings_expert">Режим за експерти</string>
+    <string name="settings_lat">Latitude</string>
+    <string name="settings_lon">Longitude</string>
     <string name="help_icon">Икона</string>
     <string name="help_application">Приложение</string>
     <string name="help_internet">има разрешение за интернет</string>
