--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -23,7 +23,7 @@
     <string name="restrict_boot">Стартиране (при пускане на системата)</string>
     <string name="restrict_browser">Браузър (отметки/история)</string>
     <string name="restrict_calendar">Календар</string>
-    <string name="restrict_calling">Действия (обаждане, съобщения, браузър)</string>
+    <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
     <string name="restrict_contacts">Контакти</string>
     <string name="restrict_identification">Идентификация (устройство, Wi-Fi)</string>
     <string name="restrict_internet">Интернет</string>
@@ -34,6 +34,7 @@
     <string name="restrict_phone">Телефон (ID, номера, обаждания)</string>
     <string name="restrict_storage">Място за съхранение (SD карта)</string>
     <string name="restrict_system">Система (инсталирани приложения)</string>
+    <string name="restrict_view">View (browser)</string>
     <string name="settings_restrict">Отбележи за ограничаване:</string>
     <string name="settings_expert">Режим за експерти</string>
     <string name="settings_lat">Геогр. ширина</string>
