--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -23,7 +23,7 @@
     <string name="restrict_boot">Εκκίνηση (τρέχει κατά την εκκίνηση του συστήματος)</string>
     <string name="restrict_browser">Browser (σελιδοδείκτες/ιστορικό)</string>
     <string name="restrict_calendar">Ημερολόγιο</string>
-    <string name="restrict_calling">Actions (call, message, browser)</string>
+    <string name="restrict_calling">Calling (phone, SMS, MMS)</string>
     <string name="restrict_contacts">Επαφές</string>
     <string name="restrict_identification">Ταυτότητα (συσκευή)</string>
     <string name="restrict_internet">Internet</string>
@@ -34,6 +34,7 @@
     <string name="restrict_phone">Τηλέφωνο (στοιχεία, αριθμοί, κλήσεις)</string>
     <string name="restrict_storage">Εξ. αποθηκευτικός χώρος (κάρτα SD)</string>
     <string name="restrict_system">Σύστημα (εγκατεστημένες εφαρμογές)</string>
+    <string name="restrict_view">View (browser)</string>
     <string name="settings_restrict">Επιλέξτε για περιορισμό:</string>
     <string name="settings_expert">Για προχωρημένους</string>
     <string name="settings_lat">Latitude</string>
