--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -17,6 +17,7 @@
     <string name="menu_about">Σχετικά</string>
     <string name="msg_noupdate">No update available</string>
     <string name="msg_restricted" formatted="false">%s περιορίστικε από το XPrivacy</string>
+    <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="restrict_accounts">Λογαριασμοί (Google, Facebook, κλπ)</string>
     <string name="restrict_boot">Εκκίνηση (τρέχει κατά την εκκίνηση του συστήματος)</string>
     <string name="restrict_browser">Browser (σελιδοδείκτες/ιστορικό)</string>
