--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -17,6 +17,7 @@
     <string name="menu_about">O programu</string>
     <string name="msg_noupdate">Na voljo ni posodobitev</string>
     <string name="msg_restricted" formatted="false">Pravica %s omejena s programom XPrivacy</string>
+    <string name="msg_licensed" formatted="false">Licensed to: %s</string>
     <string name="restrict_accounts">Računi (Google, Facebook, itd)</string>
     <string name="restrict_boot">Zagon (zagon programa ob zagonu sistema)</string>
     <string name="restrict_browser">Brskalnik (zaznamki/zgodovina)</string>
